--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -10,6 +10,10 @@ env:
   ARTIFACT: 'webHelpAEL2-all.zip'
   DOCKER_VERSION: '241.15989'
 
+permissions:
+  id-token: write
+  pages: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
